2008-09-13  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: Make it possible to explicitly disable policy-kit
	even if it is available. Patch from Nirbheek Chauhan (Bug 551763).

2008-09-09  Callum McKenzie  <callum@spooky-possum.org>

	* NEWS
	* configure.in: 2.23.92
	
	* configure.in: Patch from Pedro Fragoso to remove the explicit
	libgail check since it is now part of GTK+. (Bug 540403)

2008-09-05  Callum McKenzie  <callum@spooky-possum.org>

	* NEWS:
	* configure.in: 2.23.91

	* Makefile.am: 
	* configure.in: Remove the gnome-vfs dependency.

	* configure.in: Bump the required GTK/glib dependencies for
	the functions needed by the drive applet GIO port.

2008-08-21  Philipp Kerling  <k.philipp@gmail.com>

	* stickynotes/pixmaps/Makefile.am:
	* cpufreq/pixmaps/Makefile.am:
	* accessx-status/pixmaps/Makefile.am:
	* modemlights/Makefile.am:
	* mini-commander/src/Makefile.am:
	* geyes/Makefile.am: Call gtk-update-icon-cache in uninstall-local
	* invest-applet/data/art/invest-applet.svg:
	* invest-applet/data/art/invest-applet.16.png:
	* invest-applet/data/art/invest-applet.22.png:
	* invest-applet/data/art/invest-applet.48.png: Copy invest neutral
	icons as application icons
	* invest-applet/data/art/Makefile.am:
	* invest-applet/data/Invest_Applet.server.in.in: Install icons theme-friendly

	Fixes bug #547647.

2008-08-18  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: 2.23.90

2008-08-04  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in:
	* NEWS: 2.23.4 

2008-07-19  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in:	
	* Makefile.am: Base building of gweather conditional on
	libgweather and not gnome_vfs.

2008-06-16  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: 2.23.3

2008-06-12  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: Finally fix the build for people with gucharmap-2
	installed. Patch courtesy of Christian Persch. See bug #531298.