@@ -22,7 +22,6 @@ LIBPANEL_REQUIRED=2.13.4
 LIBGTOP_REQUIRED=2.11.92
 LIBXKLAVIER_REQUIRED=2.91
 LIBWNCK_REQUIRED=2.9.3
-SYSTEM_TOOLS_BACKENDS_REQUIRED=1.1.3
 LIBGNOME_DESKTOP_REQUIRED=2.11.1
 LIBNOTIFY_REQUIRED=0.3.2
 HAL_REQUIRED=0.5.3
