@@ -3,6 +3,10 @@
 	* configure.in: Make it possible to explicitly disable policy-kit
 	even if it is available. Patch from Nirbheek Chauhan (Bug 551763).
 
+	* m4/system-tools-backends.m4
+	* configure.in: Remove the references to system-tools-backends, we
+	don't use it (pointed out by Patryk Zawadzki in bug 552040).
+
 2008-09-09  Callum McKenzie  <callum@spooky-possum.org>
 
 	* NEWS
